--- a/src/app/components/media-slider/media-slider-item/media-slider-item.component.html
+++ b/src/app/components/media-slider/media-slider-item/media-slider-item.component.html
@@ -1,47 +1,82 @@
-<div class="slider__item-content">
-  <div class="media-content">
-    <div class="media-content__container">
-      <div class="media-content__wrapper">
-        <div class="media-content__infos" (click)="onPlayMedia(1)">
-          <div class="media-content__button media-content__button--big">
+<div
+  class="slider-item"
+  [ngClass]="{
+    'slider-item--active': active
+  }"
+>
+  <div
+    class="slider-item__content"
+    [ngClass]="{
+      'slider-item__content--transparent': activeMedia
+    }"
+  >
+    <div class="media-content">
+      <div class="media-content__container">
+        <div
+          routerLink="/watch/{{ media.id }}"
+          class="media-content__play-container"
+          [style.visibility]="active && 'visible'"
+        >
+          <div class="media-content__play">
             <i class="fas fa-play"></i>
           </div>
-          <span class="media-content__title">{{ media.title }}</span>
-          <div class="media-content__meta">
-            <div appMaturityStyle class="media-content__maturity">
-              {{ media.maturity }}
+        </div>
+        <div
+          class="media-content__wrapper"
+          [style.visibility]="activeMedia && 'hidden'"
+        >
+          <div class="media-content__infos" (click)="onPlayMedia()">
+            <div class="media-content__button media-content__button--big">
+              <i class="fas fa-play"></i>
             </div>
-            <div class="media-content__duration">
-              {{ media.duration }}
+            <span class="media-content__title">{{ media.title }}</span>
+            <div class="media-content__meta">
+              <div class="media-content__match">{{ media.match }}</div>
+              <div appMaturityStyle class="media-content__maturity">
+                {{ media.maturity }}
+              </div>
+              <div class="media-content__duration">
+                {{ media.duration }}
+              </div>
+            </div>
+            <div class="media-content__tags">
+              <span class="media-content__tag" *ngFor="let tag of media.tags"
+                >{{ tag }}
+              </span>
             </div>
           </div>
-          <div class="media-content__tags">
-            <span class="media-content__tag" *ngFor="let tag of media.tags"
-              >{{ tag }}
-            </span>
+          <div class="media-content__buttons">
+            <div class="media-content__button">
+              <i class="far fa-thumbs-up"></i>
+            </div>
+            <div class="media-content__button">
+              <i class="far fa-thumbs-down"></i>
+            </div>
+            <div class="media-content__button">
+              <i class="fas fa-check"></i>
+            </div>
+            <div class="media-content__button">
+              <i class="fas fa-plus"></i>
+            </div>
           </div>
         </div>
-        <div class="media-content__buttons">
-          <div class="media-content__button">
-            <i class="far fa-thumbs-up"></i>
-          </div>
-          <div class="media-content__button">
-            <i class="far fa-thumbs-down"></i>
-          </div>
-          <div class="media-content__button">
-            <i class="fas fa-check"></i>
-          </div>
-          <div class="media-content__button">
-            <i class="fas fa-plus"></i>
-          </div>
+        <div
+          class="media-content__details"
+          (click)="onShowDetails()"
+          [style.visibility]="activeMedia && active && 'hidden'"
+        >
+          <i class="fas fa-chevron-down"></i>
         </div>
-      </div>
-      <div class="media-content__details">
-        <i class="fas fa-chevron-down"></i>
       </div>
     </div>
   </div>
+  <div class="slider-item__background">
+    <img class="slider-item__background-image" [src]="media.thumbnail" />
+  </div>
 </div>
-<div class="slider__item-background">
-  <img class="slider__item-background-image" [src]="media.thumbnail" />
+<div
+  class="slider-item__arrow-container"
+  [style.display]="active ? 'flex' : 'none'"
+>
+  <div class="slider-item__arrow"></div>
 </div>
