--- a/src/app/components/media-slider/media-slider.component.html
+++ b/src/app/components/media-slider/media-slider.component.html
@@ -5,7 +5,7 @@
       <ul
         class="pages-count"
         [ngClass]="{
-          hide: hideSliderDetails
+          hide: !hoverSlide
         }"
       >
         <li
@@ -22,78 +22,19 @@
     class="slider"
     (mouseenter)="onEnterSlider()"
     (mouseleave)="onLeaveSlider()"
+    [ngClass]="{ 'slider--hover': hoverSlide }"
   >
     <div class="slider__container" #slider>
-      <div
+      <app-media-slider-item
         class="slider__item"
-        #sliderItem
         *ngFor="let media of sliderItems; let i = index"
+        [media]="media"
+        [style.transform]="getTranformStyle(i)"
         (mouseenter)="onHoverItem(i)"
         (mouseleave)="onLeaveItem()"
-      >
-        <div
-          class="slider__item-container"
-          [style.transform]="getTranformStyle(i)"
-        >
-          <div class="slider__item-content">
-            <div class="media-content">
-              <div class="media-content__container">
-                <div class="media-content__wrapper">
-                  <div
-                    class="media-content__infos"
-                    (click)="onPlayMedia(i + 1)"
-                  >
-                    <div
-                      class="media-content__button media-content__button--big"
-                    >
-                      <i class="fas fa-play"></i>
-                    </div>
-                    <span class="media-content__title">{{ media.title }}</span>
-                    <div class="media-content__meta">
-                      <div appMaturityStyle class="media-content__maturity">
-                        {{ media.maturity }}
-                      </div>
-                      <div class="media-content__duration">
-                        {{ media.duration }}
-                      </div>
-                    </div>
-                    <div class="media-content__tags">
-                      <span
-                        class="media-content__tag"
-                        *ngFor="let tag of media.tags"
-                        >{{ tag }}
-                      </span>
-                    </div>
-                  </div>
-                  <div class="media-content__buttons">
-                    <div class="media-content__button">
-                      <i class="far fa-thumbs-up"></i>
-                    </div>
-                    <div class="media-content__button">
-                      <i class="far fa-thumbs-down"></i>
-                    </div>
-                    <div class="media-content__button">
-                      <i class="fas fa-check"></i>
-                    </div>
-                    <div class="media-content__button">
-                      <i class="fas fa-plus"></i>
-                    </div>
-                  </div>
-                </div>
-                <div class="media-content__details">
-                  <i class="fas fa-chevron-down"></i>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="slider__item-background">
-            <img
-              class="slider__item-background-image"
-              [src]="media.thumbnail"
-            />
-          </div>
-        </div>
-      </div>
+        (activeMediaChange)="onActiveMedia($event)"
+        [activeMedia]="activeMedia"
+      ></app-media-slider-item>
     </div>
     <div
       *ngIf="showPrev"
@@ -104,7 +45,7 @@
       <i
         class="fas fa-chevron-left"
         [ngClass]="{
-          hide: hideSliderDetails
+          hide: !hoverSlide
         }"
       ></i>
     </div>
@@ -117,9 +58,88 @@
       <i
         class="fas fa-chevron-right"
         [ngClass]="{
-          hide: hideSliderDetails
+          hide: !hoverSlide
         }"
       ></i>
+    </div>
+  </div>
+  <div class="slider__item-details" *ngIf="activeMedia">
+    <div class="details__container">
+      <div class="details__background">
+        <div class="details__sketch"></div>
+        <div
+          class="details__image"
+          [style.backgroundImage]="'url(' + activeMedia.billboard + ')'"
+        ></div>
+      </div>
+      <div class="details__infos">
+        <img
+          [src]="activeMedia.thumbnailLogo"
+          class="details__thumbnail-logo"
+        />
+        <div class="details__meta">
+          <div class="details__match">{{ activeMedia.match }}</div>
+          <div class="details__last-release">{{ activeMedia.lastRelease }}</div>
+          <div class="details__maturity" appMaturityStyle>
+            {{ activeMedia.maturity }}
+          </div>
+          <div class="details__duration">{{ activeMedia.duration }}</div>
+        </div>
+        <div class="details__synopsis">{{ activeMedia.synopsis }}</div>
+        <div class="details__buttons">
+          <div
+            class="details__button details__button--red"
+            routerLink="/watch/{{ activeMedia.id }}"
+          >
+            <i class="fas fa-play details__button-icon"></i>
+            <span>PLAY</span>
+          </div>
+          <div class="details__button details__button--bordered">
+            <i class="fas fa-plus details__button-icon"></i>
+            <span>MY LIST</span>
+          </div>
+          <div
+            class="details__button details__button--bordered details__button--rounded"
+          >
+            <i class="far fa-thumbs-up"></i>
+          </div>
+          <div
+            class="details__button details__button--bordered details__button--rounded"
+          >
+            <i class="far fa-thumbs-down"></i>
+          </div>
+        </div>
+        <div class="details__starring">
+          <span>Starring: </span>
+          <div
+            class="details__starring-item"
+            *ngFor="let starring of activeMedia.starring; let isLast = last"
+          >
+            {{ starring }}{{ isLast ? '' : ',' }}
+          </div>
+        </div>
+        <div class="details__genres">
+          <span>Genres: </span>
+          <div
+            class="details__genres-item"
+            *ngFor="let genre of activeMedia.genres; let isLast = last"
+          >
+            {{ genre }}{{ isLast ? '' : ',' }}
+          </div>
+        </div>
+        <div class="details__tags">
+          <span>This movie is: </span>
+          <div
+            class="details__tags-item"
+            *ngFor="let tag of activeMedia.tags; let isLast = last"
+          >
+            {{ tag }}{{ isLast ? '' : ',' }}
+          </div>
+        </div>
+      </div>
+      <div class="details__close-button" (click)="onCloseMedia()">
+        <i class="fas fa-times"></i>
+      </div>
     </div>
   </div>
 </div>
