--- a/src/app/components/media-slider/media-slider.component.scss
+++ b/src/app/components/media-slider/media-slider.component.scss
@@ -40,8 +40,11 @@
 .slider {
   max-width: 100vw;
   padding: 10px 0;
-  z-index: 1;
   position: relative;
+
+  &--hover {
+    z-index: 10;
+  }
 
   &__container {
     white-space: nowrap;
@@ -53,7 +56,7 @@
     display: inline-block;
     position: relative;
     width: calc(100% / 3);
-    z-index: 1;
+    transition: all 500ms ease;
     cursor: pointer;
 
     @media all and (min-width: 800px) {
@@ -66,45 +69,19 @@
       width: calc(100% / 6);
     }
 
-    // &:hover {
-    //   border: 3px solid white;
-    // }
-
-    // &--active {
-    //   border: 3px solid white;
-    // }
-  }
-
-  &__item-background {
-    display: flex;
-    width: 100%;
-
-    &:hover {
-      z-index: -1;
+    &--hover {
+      border: 1px solid black;
+      z-index: 10;
     }
   }
 
-  &__item-background-image {
-    max-width: 100%;
-  }
-
-  &__item-container {
-    margin: 0 2px;
-    transition: all 500ms ease;
-  }
-
-  &__item-content {
-    position: absolute;
-    height: 100%;
+  &__item-details {
+    position: relative;
+    // background: red;
+    top: -11px;
     width: 100%;
-    opacity: 0;
-    transition: all 1000ms ease;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 5));
-
-    &:hover {
-      opacity: 1;
-      z-index: 1;
-    }
+    height: 40vw;
+    max-height: 85vh;
   }
 }
 
@@ -153,36 +130,53 @@
   color: transparent;
 }
 
-.media-content {
-  height: 100%;
-
+.details {
   &__container {
-    height: 100%;
     display: flex;
-    flex-direction: column;
+    height: 100%;
+    background-color: black;
   }
 
-  &__wrapper {
-    height: 100%;
-    display: flex;
-    align-items: flex-end;
-    margin: 0px 10px;
+  &__background {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
   }
 
-  &__infos {
-    flex: 1;
-    font-size: 8px;
-    margin-bottom: 5px;
+  &__sketch {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 30%;
 
-    &:hover {
-      color: red;
+    &::before {
+      content: ' ';
+      position: absolute;
+      top: 0;
+      left: 100%;
+      bottom: 0;
+      width: 275px;
+      background: linear-gradient(to right, #000, transparent);
+      z-index: 1;
     }
   }
 
-  &__title {
-    font-size: 12px;
-    font-weight: 500;
-    color: white;
+  &__image {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 70%;
+    background-size: cover;
+  }
+
+  &__infos {
+    width: 40%;
+    position: relative;
+    z-index: 2;
+    margin: 18px 0 12px 4%;
   }
 
   &__meta {
@@ -190,69 +184,137 @@
     align-items: center;
     margin: 2px 0;
     color: white;
+    margin-top: 20px;
+  }
+
+  &__match {
+    color: #46d369;
+    font-size: 1.1vw;
+    font-weight: 500;
+    margin-right: 0.4vw;
+  }
+
+  &__last-release {
+    font-size: 1.1vw;
+    margin: 0 0.4vw;
   }
 
   &__maturity {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 14px;
-    height: 14px;
+    width: 1.8vw;
+    height: 1.8vw;
     border-radius: 1px;
-    margin: 0 5px;
+    margin: 0 0.4vw;
+    font-size: 1.1vw;
   }
 
   &__duration {
-    font-size: 10px;
-    font-weight: 400;
+    font-weight: bold;
+    font-size: 1.1vw;
+    margin-left: 0.4vw;
+  }
+
+  &__synopsis {
+    font-size: 1.4vw;
+    font-weight: 500;
+    color: #999;
+    line-height: 1.3;
+    margin-top: 1rem;
+
+    @media all and (min-width: 800px) {
+      font-size: 1.3vw;
+    }
+    @media all and (min-width: 1100px) {
+      font-size: 1.2vw;
+    }
+    @media all and (min-width: 1400px) {
+      font-size: 1.1vw;
+    }
   }
 
   &__buttons {
     display: flex;
-    flex-direction: column;
-    margin-bottom: 5px;
+    margin: 15px 0 20px 0;
   }
 
   &__button {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid #999;
-    border-radius: 50%;
-    width: 14px;
-    height: 14px;
-    font-size: 6px;
-    background: rgba(0, 0, 0, 0.5);
-    margin-top: 2px;
+    font-size: 1vw;
+    font-weight: bold;
+    margin-right: 10px;
+    padding: 1.1vw 2vw;
+    height: 1.5vw;
+    cursor: pointer;
+    transition: transform 500ms ease;
 
     &:hover {
-      border: 1px solid #fff;
       transform: scale(1.1);
     }
 
-    &--big {
-      width: 24px;
-      height: 24px;
-      font-size: 10px;
-      margin: 2px 0;
+    &--red {
+      background-color: red;
+      border: 2px solid red;
+    }
+
+    &--bordered {
+      border: 2px solid white;
+
+      &:hover {
+        border: 2px solid #828282;
+        background-color: rgba(35, 35, 35, 0.3);
+      }
+    }
+
+    &--rounded {
+      border-radius: 50%;
+      padding: 0;
+      height: 2.5vw;
+      width: 2.5vw;
+      border: 2px solid #828282;
+
+      &:hover {
+        border: 2px solid white;
+      }
+    }
+
+    &-icon {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.2vw;
+      width: 1.4vw;
+      height: 1.4vw;
+      margin-right: 10px;
     }
   }
 
+  &__close-button {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 30px;
+    cursor: pointer;
+    z-index: 1;
+  }
+
+  &__starring,
+  &__genres,
   &__tags {
-    color: white;
-  }
-
-  &__tag {
-    margin-right: 10px;
-  }
-
-  &__details {
     display: flex;
-    justify-content: center;
-    margin-bottom: 5px;
+    color: #828282;
+    font-weight: bold;
+    white-space: pre;
+  }
 
-    &:hover {
-      color: red;
-    }
+  &__starring-item,
+  &__genres-item,
+  &__tags-item {
+    color: #828282;
+    font-weight: 400;
+    white-space: pre;
   }
 }
